# vggt-gaussian-reconstruction

./: .gitignore  AGENTS.md  README.md  ba_optimize.py  evaluate.py  prepare_data.py  pyproject.toml  requirements.txt  run_vggt.py  train_gaussians.py  vggt_gaussian_2023011002_李翔宇.pptx  viewer.py
docs/: ppt_outline.md  vggt_precision_experiments.md
scripts/: clean_gaussian_checkpoint.py  compile_external_gsplat_gpu.sh  filter_colmap_points.py  merge_simple_trainer_checkpoints.py  monitor_vggt_precision.sh  run_simple_trainer_control.sh  setup_a800_env.sh  sleep_forever.sh  start_online_inference_service.sh  train_infer_baidu.sh
scripts/experiments_vggt_precision/: 00_baseline_quality.sh  01_anchor_frame_selection.sh  02_parallax_adaptive_query.sh  03_coarse_to_fine_frames.sh  04_two_stage_ba_filter.sh  README.md
src/vggt_gaussian_reconstruction/: __init__.py  ba.py  colmap.py  eval_utils.py  frame_selection.py  gaussian_trainer.py  geometry.py  vggt_runner.py
tests/: test_ba_optimize.py  test_colmap.py  test_colmap_ba.py  test_frame_selection.py  test_gaussian_trainer.py  test_vggt_runner.py  test_viewer.py
